[project]
name = "nano-demo"
version = "0.1.0"
description = "A minimal LLM inference demo"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flashinfer-cubin>=0.6.6",
    "flashinfer-python>=0.6.6",
    "transformers>=5.3.0",
]

[[tool.uv.index]]
url = "https://flashinfer.ai/whl/cu129/"

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu129" }
